--- a/Klike/Interfaces/UserProfileView.xib
+++ b/Klike/Interfaces/UserProfileView.xib
@@ -67,8 +67,8 @@
                             <color key="textColor" red="0.68627450980000004" green="0.70588235290000001" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZe-ea-iVS">
-                            <rect key="frame" x="359" y="58" width="88" height="32"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZe-ea-iVS">
+                            <rect key="frame" x="359" y="66" width="88" height="32"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="88" id="gCS-Ui-nWP"/>
                             </constraints>
@@ -83,13 +83,13 @@
                     <constraints>
                         <constraint firstItem="Tvb-ku-MQ1" firstAttribute="centerX" secondItem="Kwf-qI-mDf" secondAttribute="centerX" constant="51.5" id="0Hb-Z2-geC"/>
                         <constraint firstItem="fIl-rl-K86" firstAttribute="centerX" secondItem="Tvb-ku-MQ1" secondAttribute="centerX" id="558-Bb-wIy"/>
-                        <constraint firstItem="dZe-ea-iVS" firstAttribute="top" secondItem="Tvb-ku-MQ1" secondAttribute="bottom" constant="7" id="6xe-pr-FR1"/>
+                        <constraint firstItem="dZe-ea-iVS" firstAttribute="top" secondItem="Tvb-ku-MQ1" secondAttribute="bottom" constant="15" id="6xe-pr-FR1"/>
                         <constraint firstItem="fIl-rl-K86" firstAttribute="top" secondItem="Tvb-ku-MQ1" secondAttribute="bottom" constant="8" id="8wk-mm-ce3"/>
                         <constraint firstItem="Tvb-ku-MQ1" firstAttribute="top" secondItem="iD4-sZ-7lh" secondAttribute="top" constant="32" id="9JU-92-8n0"/>
                         <constraint firstItem="Kwf-qI-mDf" firstAttribute="centerX" secondItem="2EL-0H-LMK" secondAttribute="centerX" constant="0.5" id="BVh-BC-V7b"/>
                         <constraint firstItem="fIl-rl-K86" firstAttribute="centerX" secondItem="k67-uQ-xaX" secondAttribute="centerX" constant="1" id="DdB-rf-dgd"/>
                         <constraint firstItem="fIl-rl-K86" firstAttribute="centerX" secondItem="Tvb-ku-MQ1" secondAttribute="centerX" constant="53.5" id="KJV-QT-kRw"/>
-                        <constraint firstAttribute="centerX" secondItem="Tvb-ku-MQ1" secondAttribute="centerX" constant="-0.5" id="W76-d3-bWK"/>
+                        <constraint firstAttribute="centerX" secondItem="Tvb-ku-MQ1" secondAttribute="centerX" id="W76-d3-bWK"/>
                         <constraint firstItem="dZe-ea-iVS" firstAttribute="leading" secondItem="fIl-rl-K86" secondAttribute="trailing" constant="8" id="acB-dX-cHs"/>
                         <constraint firstItem="fIl-rl-K86" firstAttribute="leading" secondItem="Kwf-qI-mDf" secondAttribute="trailing" constant="5" id="dBX-lM-tW5"/>
                         <constraint firstAttribute="height" constant="110" id="gHD-Bs-0Ha"/>
