--- a/Klike/Interfaces/Main.storyboard
+++ b/Klike/Interfaces/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xyk-5J-ogf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xyk-5J-ogf">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -90,24 +90,41 @@
             </objects>
             <point key="canvasLocation" x="1662" y="-229.5"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="a6s-NM-sTE">
+        <!--Event View Controller-->
+        <scene sceneID="WUl-9V-X9j">
             <objects>
-                <viewController id="iLJ-2j-cMl" sceneMemberID="viewController">
+                <viewController id="pRZ-09-we6" customClass="KLEventViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="wv0-O9-1cs"/>
-                        <viewControllerLayoutGuide type="bottom" id="TbL-VB-xiZ"/>
+                        <viewControllerLayoutGuide type="top" id="tQ5-1q-cpu"/>
+                        <viewControllerLayoutGuide type="bottom" id="RRv-Ou-doa"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="azN-dE-iq6">
+                    <view key="view" contentMode="scaleToFill" id="tME-RI-cWw">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="3" title="" image="ic_tabbar_4" id="83o-NZ-Bff"/>
+                    <navigationItem key="navigationItem" id="SWL-qb-d4p"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qQo-ZI-qwo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r0M-M0-foJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-436" y="30"/>
+            <point key="canvasLocation" x="-1245" y="7"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="oOK-s4-bla">
+            <objects>
+                <navigationController id="zFR-FO-qae" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" tag="3" title="" image="ic_tabbar_4" id="AT0-eo-taJ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NWH-np-wLO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="pRZ-09-we6" kind="relationship" relationship="rootViewController" id="ElW-ha-k50"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a3P-Gc-eWE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-568" y="-6"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7xA-ac-M51">
@@ -161,7 +178,7 @@
                         <segue destination="vci-2W-GIt" kind="relationship" relationship="viewControllers" id="bU9-1t-ALJ"/>
                         <segue destination="vOD-mA-M03" kind="relationship" relationship="viewControllers" id="3DC-BM-hjQ"/>
                         <segue destination="CDl-bB-7wc" kind="relationship" relationship="viewControllers" id="Vgv-FS-4Xx"/>
-                        <segue destination="iLJ-2j-cMl" kind="relationship" relationship="viewControllers" id="mAf-wc-e69"/>
+                        <segue destination="zFR-FO-qae" kind="relationship" relationship="viewControllers" id="UoL-s8-Gz0"/>
                         <segue destination="USS-OX-ahW" kind="relationship" relationship="viewControllers" id="IYL-Fb-6bf"/>
                     </connections>
                 </tabBarController>
