--- a/Klike/Interfaces/ExplorePeopleCell.xib
+++ b/Klike/Interfaces/ExplorePeopleCell.xib
@@ -22,7 +22,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Christofer Riot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OlY-KR-Vg4" userLabel="userName">
-                        <rect key="frame" x="56" y="14" width="179" height="17"/>
+                        <rect key="frame" x="56" y="14" width="158" height="17"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                         <color key="textColor" red="0.1137254902" green="0.12549019610000001" blue="0.1529411765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -71,20 +71,21 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EFe-gI-BHt">
-                        <rect key="frame" x="240" y="20" width="64" height="24"/>
+                        <rect key="frame" x="219" y="20" width="85" height="24"/>
                         <constraints>
+                            <constraint firstAttribute="width" constant="85" id="5Zg-tl-3Jf"/>
                             <constraint firstAttribute="width" constant="64" id="8NQ-3f-MA9"/>
                             <constraint firstAttribute="height" constant="27" id="PEd-9c-bSs"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
-                        <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="1"/>
+                        <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="1"/>
                         <inset key="imageEdgeInsets" minX="-6" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <state key="normal" title="Follow" backgroundImage="btn_small_stroke">
-                            <color key="titleColor" red="0.39215686274509803" green="0.40000000000000002" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" title="Following" image="ic_following" backgroundImage="btn_small_filled">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="8NQ-3f-MA9"/>
                                 <exclude reference="PEd-9c-bSs"/>
                             </mask>
                         </variation>
@@ -130,8 +131,9 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="btn_small_stroke" width="21" height="24"/>
+        <image name="btn_small_filled" width="26" height="24"/>
         <image name="explore_slash" width="3" height="8"/>
+        <image name="ic_following" width="11" height="9"/>
         <image name="profile_pic_placeholder" width="56" height="56"/>
     </resources>
 </document>
