--- a/Klike/Interfaces/UserListCell.xib
+++ b/Klike/Interfaces/UserListCell.xib
@@ -22,21 +22,21 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Christofer Riot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7h5-bS-vr0" userLabel="userName">
-                        <rect key="frame" x="56" y="24" width="178" height="17"/>
+                        <rect key="frame" x="56" y="24" width="158" height="17"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                         <color key="textColor" red="0.1137254902" green="0.12549019610000001" blue="0.1529411765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3JM-hs-9D3">
-                        <rect key="frame" x="239" y="21" width="65" height="23"/>
+                        <rect key="frame" x="219" y="20" width="85" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="27" id="Xes-XU-MXw"/>
+                            <constraint firstAttribute="width" constant="85" id="xZU-jI-WHJ"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
-                        <inset key="contentEdgeInsets" minX="14" minY="4" maxX="14" maxY="4"/>
+                        <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="1"/>
                         <inset key="imageEdgeInsets" minX="-6" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <state key="normal" title="Follow">
-                            <color key="titleColor" red="0.3921568627" green="0.40000000000000002" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" title="Following" image="ic_following" backgroundImage="btn_small_filled">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <variation key="default">
@@ -76,6 +76,8 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="btn_small_filled" width="26" height="24"/>
+        <image name="ic_following" width="11" height="9"/>
         <image name="profile_pic_placeholder" width="56" height="56"/>
     </resources>
 </document>
