--- a/Klike/Sources/Controllers/KLEventGalleryCell.xib
+++ b/Klike/Sources/Controllers/KLEventGalleryCell.xib
@@ -6,13 +6,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLEventGalleryCell" id="e1a-EF-CfJ" customClass="KLEventGalleryCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLEventGalleryCell" rowHeight="69" id="e1a-EF-CfJ" customClass="KLEventGalleryCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e1a-EF-CfJ" id="Adk-5S-lhU">
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jM8-vB-YIc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="QCX-LY-88o">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="hwX-Jn-DDH">
+                                    <size key="itemSize" width="88" height="88"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="QCX-LY-88o" secondAttribute="bottom" id="CWV-Jx-EcF"/>
+                            <constraint firstItem="QCX-LY-88o" firstAttribute="top" secondItem="jM8-vB-YIc" secondAttribute="top" id="NDf-1U-M8o"/>
+                            <constraint firstItem="QCX-LY-88o" firstAttribute="leading" secondItem="jM8-vB-YIc" secondAttribute="leading" id="XkL-5j-x8K"/>
+                            <constraint firstAttribute="trailing" secondItem="QCX-LY-88o" secondAttribute="trailing" id="pZ8-By-9QI"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="jM8-vB-YIc" secondAttribute="bottom" constant="3" id="08v-ZQ-JjK"/>
+                    <constraint firstItem="jM8-vB-YIc" firstAttribute="top" secondItem="Adk-5S-lhU" secondAttribute="top" id="GHm-aO-IFz"/>
+                    <constraint firstItem="jM8-vB-YIc" firstAttribute="leading" secondItem="Adk-5S-lhU" secondAttribute="leading" id="XOd-QJ-Caf"/>
+                    <constraint firstAttribute="trailing" secondItem="jM8-vB-YIc" secondAttribute="trailing" id="yqm-Z0-HhW"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="184" y="420"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <point key="canvasLocation" x="165" y="341.5"/>
         </tableViewCell>
     </objects>
 </document>
